# shap-mllm-explainer

./: README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DOCKERFILE  Dockerfile  README.md  pyproject.toml
backend/app/: db.py  main.py  models.py
backend/app/api/: api.py
backend/app/api/controllers/: ml.py  sessions.py
backend/app/services/: explainability.py  inference.py  model_loader.py
backend/utils/: record_audio.py  record_audio.sh
web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: AudioAttributionView.tsx  ExportDialog.tsx  InputPanel.tsx  MethodConfigPanel.tsx  ModalityComparisonView.tsx  ModelConfigPanel.tsx  SessionManager.tsx  TelemetryDisplay.tsx  TextAttributionView.tsx  VisualizationPanel.tsx
