[project]
name = "shap_mllm_explainer_backend"
version = "0.1.0"
description = "Backend for the MLLM Shapley Value Explainability App"
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.2",
    "python-multipart>=0.0.7",
    "transformers[torch]>=4.38.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "accelerate>=0.27.0",
    "shap>=0.44.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "scipy>=1.10.0",
    "liquid-audio>=0.1.0",
    "einops>=0.7.0",
    "bitsandbytes>=0.41.0",
    "sqlmodel>=0.0.18",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
    "sounddevice>=0.4.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 150
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
